--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,6 @@
 service: citizentrader-monitoring
 
-frameworkVersion: 2
+frameworkVersion: '2'
 
 functions: ${file(serverless/functions.yml)}
 
@@ -27,11 +27,11 @@ provider:
         name: ${self:custom.deploymentBucketName}
 
 custom:
-    stage: ${opt:stage, env:AWS_STAGE}
+    stage: ${opt:stage, "dev"}
     region: ${env:AWS_REGION}
     deploymentBucketName: ${self:custom.stage}-deployment-citizentrader-monitoring
     webpack:
         webpackConfig: webpack.config.ts
-        includeModules: true
+        includeModules: false
 
 
